--- a/doctor.html
+++ b/doctor.html
@@ -159,6 +159,50 @@
 
     <main class="container mx-auto px-6 py-12">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <!-- Dr Soumik -->
+            <div class="doctor-card bg-white rounded-2xl shadow-xl p-8 text-center fade-in"
+                style="animation-delay: 0.4s;">
+                <div class="relative mb-6">
+                    <div
+                        class="w-24 h-24 bg-gradient-to-r from-pet-blue overflow-hidden  to-pet-dark-blue rounded-full mx-auto flex items-center justify-center">
+                        <img src="images/dr soumik.jpg" class="w-full h-full object-cover object-top alt="">
+                    </div>
+                    <div
+                        class=" absolute -bottom-2 -right-2 w-8 h-8 bg-green-500 rounded-full flex items-center
+                            justify-center">
+                        <i class="fas fa-check text-white text-sm"></i>
+                    </div>
+                </div>
+                <h3 class="text-2xl font-bold text-gray-800 mb-2">Dr Soumik Swain</h3>
+                <div class="bg-pet-light-blue text-pet-dark-blue px-4 py-2 rounded-full text-sm font-semibold mb-3">
+                    Veterinary Assistant Surgeon
+                </div>
+                <div class="flex items-center justify-center text-gray-600 mb-4">
+                    <i class="fas fa-map-marker-alt mr-2 text-pet-blue"></i>
+                    <span>Berhampur</span>
+                </div>
+                <div class="border-t pt-4">
+                    <div class="flex justify-center space-x-4">
+                        <div class="text-center">
+                            <i class="fas fa-paw text-pet-blue text-xl mb-1"></i>
+                            <p class="text-xs text-gray-500">Pet Care</p>
+                        </div>
+                        <div class="text-center">
+                            <i class="fas fa-syringe text-green-500 text-xl mb-1"></i>
+                            <p class="text-xs text-gray-500">Surgery</p>
+                        </div>
+                        <div class="text-center">
+                            <i class="fas fa-heart text-red-500 text-xl mb-1"></i>
+                            <p class="text-xs text-gray-500">Emergency</p>
+                        </div>
+                    </div>
+                    <button data-number="917504451198"
+                        class="book-btn bg-pet-blue mt-5 hover:bg-pet-dark-blue text-white font-semibold py-2 px-6 rounded-full transition duration-300">
+                        Book Appointment
+                    </button>
+                </div>
+            </div>
+
             <!-- Dr Santosh -->
             <div class="doctor-card bg-white rounded-2xl shadow-xl p-8 text-center fade-in"
                 style="animation-delay: 0.2s;">
@@ -202,50 +246,6 @@
                         Book Appointment
                     </button>
 
-                </div>
-            </div>
-
-
-            <!-- Dr Soumik -->
-            <div class="doctor-card bg-white rounded-2xl shadow-xl p-8 text-center fade-in"
-                style="animation-delay: 0.4s;">
-                <div class="relative mb-6">
-                    <div
-                        class="w-24 h-24 bg-gradient-to-r from-pet-blue to-pet-dark-blue rounded-full mx-auto flex items-center justify-center">
-                        <i class="fas fa-user-md text-white text-3xl"></i>
-                    </div>
-                    <div
-                        class="absolute -bottom-2 -right-2 w-8 h-8 bg-green-500 rounded-full flex items-center justify-center">
-                        <i class="fas fa-check text-white text-sm"></i>
-                    </div>
-                </div>
-                <h3 class="text-2xl font-bold text-gray-800 mb-2">Dr Soumik Swain</h3>
-                <div class="bg-pet-light-blue text-pet-dark-blue px-4 py-2 rounded-full text-sm font-semibold mb-3">
-                    Veterinary Assistant Surgeon
-                </div>
-                <div class="flex items-center justify-center text-gray-600 mb-4">
-                    <i class="fas fa-map-marker-alt mr-2 text-pet-blue"></i>
-                    <span>Berhampur</span>
-                </div>
-                <div class="border-t pt-4">
-                    <div class="flex justify-center space-x-4">
-                        <div class="text-center">
-                            <i class="fas fa-paw text-pet-blue text-xl mb-1"></i>
-                            <p class="text-xs text-gray-500">Pet Care</p>
-                        </div>
-                        <div class="text-center">
-                            <i class="fas fa-syringe text-green-500 text-xl mb-1"></i>
-                            <p class="text-xs text-gray-500">Surgery</p>
-                        </div>
-                        <div class="text-center">
-                            <i class="fas fa-heart text-red-500 text-xl mb-1"></i>
-                            <p class="text-xs text-gray-500">Emergency</p>
-                        </div>
-                    </div>
-                    <button data-number="918328919145"
-                        class="book-btn bg-pet-blue mt-5 hover:bg-pet-dark-blue text-white font-semibold py-2 px-6 rounded-full transition duration-300">
-                        Book Appointment
-                    </button>
                 </div>
             </div>
 
@@ -326,21 +326,9 @@
                         compassion and expertise to ensure your pet's wellbeing.
                     </p>
                     <div class="flex space-x-4">
-                        <a href="#"
+                        <a href="https://www.facebook.com/share/1CPWgDCmQ8/"
                             class="w-10 h-10 bg-blue-600 text-white rounded flex items-center justify-center hover:bg-blue-700 transition-colors">
                             <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-blue-400 text-white rounded flex items-center justify-center hover:bg-blue-500 transition-colors">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-red-600 text-white rounded flex items-center justify-center hover:bg-red-700 transition-colors">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="#"
-                            class="w-10 h-10 bg-pink-600 text-white rounded flex items-center justify-center hover:bg-red-700 transition-colors">
-                            <i class="fab fa-instagram"></i>
                         </a>
                     </div>
                 </div>
@@ -349,7 +337,7 @@
                     <ul class="space-y-2">
                         <li><a href="#home" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Home</a>
                         </li>
-                        <li><a href="#about"
+                        <li><a href="doctor.html"
                                 class="text-gray-600 hover:text-pet-blue transition-colors text-lg">About</a></li>
                         <li><a href="#contact"
                                 class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Contact</a></li>
@@ -367,19 +355,25 @@
                         <div class="flex items-start">
                             <i class="fas fa-map-marker-alt text-pet-blue mr-3 mt-1"></i>
                             <div class="text-lg">
-                                <strong>Address:</strong> 15/16 balaji tower subhash colony jaipur
+                                <strong>Address:</strong> GandhiNagar, Near Mahamayee College, Berhampur
                             </div>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-pet-blue mr-3"></i>
                             <div class="text-lg">
-                                <strong>Email:</strong> pethoscope@gmail.com
+                                <strong>Email:</strong> info@mlaservices.com
                             </div>
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-phone text-pet-blue mr-3"></i>
                             <div class="text-lg">
-                                <strong>Call:</strong> +91234567890
+                                <strong>Call:</strong> +91 91140 63848
+                            </div>
+                        </div>
+                        <div class="flex items-center">
+                            <i class="fas fa-clock text-pet-blue mr-3"></i>
+                            <div class="text-lg">
+                                <strong>Hours:</strong> Mon-Sat: 9:00 AM - 8:00 PM
                             </div>
                         </div>
                     </div>
@@ -389,7 +383,7 @@
         <div class="border-t border-gray-300 mt-12 pt-8">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center text-gray-600">
-                    <p class="text-lg">Copyright © 2023 Pethoscope. All rights reserved. Privacy Policy.</p>
+                    <p class="text-lg">Copyright © 2025 Pethoscope. All rights reserved. Privacy Policy.</p>
                 </div>
             </div>
         </div>
@@ -442,9 +436,9 @@
             });
         });
 
-      document.getElementById('close-form-btn').addEventListener('click', () => {
-    document.getElementById('appointment-modal').classList.add('hidden');
-});
+        document.getElementById('close-form-btn').addEventListener('click', () => {
+            document.getElementById('appointment-modal').classList.add('hidden');
+        });
 
 
         let selectedWhatsAppNumber = null;
